--- a/docs/tensorboard_profiling_keras.ipynb
+++ b/docs/tensorboard_profiling_keras.ipynb
@@ -115,7 +115,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7bacf149-cee2-4680-9772-3aacdc956b36"
+        "outputId": "1a1ba56f-1248-4846-87f3-4512a06cc282"
       },
       "outputs": [
         {
@@ -137,7 +137,7 @@
             "Requirement already satisfied: zipp in /usr/local/lib/python3.10/dist-packages (from etils[epath]>=1.0.0->tensorboard_plugin_profile) (3.21.0)\n",
             "Requirement already satisfied: MarkupSafe>=2.1.1 in /usr/local/lib/python3.10/dist-packages (from werkzeug>=0.11.15->tensorboard_plugin_profile) (3.0.2)\n",
             "Downloading tensorboard_plugin_profile-2.19.0-cp310-none-manylinux2014_x86_64.whl (25.8 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m25.8/25.8 MB\u001b[0m \u001b[31m54.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m25.8/25.8 MB\u001b[0m \u001b[31m53.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading gviz_api-1.10.0-py2.py3-none-any.whl (13 kB)\n",
             "Installing collected packages: gviz-api, tensorboard_plugin_profile\n",
             "Successfully installed gviz-api-1.10.0 tensorboard_plugin_profile-2.19.0\n"
@@ -156,7 +156,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ba02e07d-54e4-4e37-8545-f12ec5130d3b"
+        "outputId": "a9f667e2-297d-4184-9369-b59e2f2a4749"
       },
       "outputs": [
         {
@@ -190,7 +190,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "69152297-6d98-4304-c019-246b9fa6aba0"
+        "outputId": "d1d4ca69-ef43-420e-ece2-8e25f817c1a4"
       },
       "outputs": [
         {
@@ -312,7 +312,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "41b08fe8-b7b0-4201-cde4-de7296c6fd4f"
+        "outputId": "f9e0b41e-e3c5-493c-dfa4-4030529cd7c7"
       },
       "outputs": [
         {
@@ -348,34 +348,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "OkAo1BanlEeB",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f0246166-97cf-42c8-a4b5-bf445c4d8c01"
+        "outputId": "9f93bd5d-d412-48bb-96c0-69ef861f6f77"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/2\n",
-            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 9ms/step - accuracy: 0.8273 - loss: 0.6232 - val_accuracy: 0.9461 - val_loss: 0.1889\n",
-            "Epoch 2/2\n",
-            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 4ms/step - accuracy: 0.9506 - loss: 0.1741 - val_accuracy: 0.9598 - val_loss: 0.1343\n"
+            "Epoch 1/2\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<keras.src.callbacks.history.History at 0x7fbbf4ffbd00>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 11
         }
       ],
       "source": [
@@ -405,7 +392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "jqx5wF1Vlwe9"
       },
@@ -426,40 +413,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 821
-        },
-        "id": "lugpLFAflkeI",
-        "outputId": "87a56239-5656-4696-b00c-2f4c3a7204bb"
+        "id": "lugpLFAflkeI"
       },
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "        (async () => {\n",
-              "            const url = new URL(await google.colab.kernel.proxyPort(6006, {'cache': true}));\n",
-              "            url.searchParams.set('tensorboardColab', 'true');\n",
-              "            const iframe = document.createElement('iframe');\n",
-              "            iframe.src = url;\n",
-              "            iframe.setAttribute('width', '100%');\n",
-              "            iframe.setAttribute('height', '800');\n",
-              "            iframe.setAttribute('frameborder', 0);\n",
-              "            document.body.appendChild(iframe);\n",
-              "        })();\n",
-              "    "
-            ]
-          },
-          "metadata": {}
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Launch TensorBoard and navigate to the Profile tab to view performance profile\n",
         "%tensorboard --logdir=logs"
@@ -655,16 +613,29 @@
     {
       "cell_type": "code",
       "source": [
-        "import jax\n",
-        "\n",
-        "with jax.profiler.trace(\"/storeroom/logs/jax\", create_perfetto_link=True):\n",
-        "  key = jax.random.key(0)\n",
-        "  x = jax.random.normal(key, (5000, 5000))\n",
-        "  y = x @ x\n",
-        "  y.block_until_ready()"
+        "import jax"
       ],
       "metadata": {
-        "id": "sz-kI3Lnd63w"
+        "id": "hWFgbMj9phxt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "jax.profiler.start_trace(\"/storeroom/logs/jax\", create_perfetto_link=True, create_perfetto_trace=True)\n",
+        "\n",
+        "# Run the operations to be profiled\n",
+        "key = jax.random.key(0)\n",
+        "x = jax.random.normal(key, (5000, 5000))\n",
+        "y = x @ x\n",
+        "y.block_until_ready()\n",
+        "\n",
+        "jax.profiler.stop_trace()"
+      ],
+      "metadata": {
+        "id": "cq5Kwc0Cpi5q"
       },
       "execution_count": null,
       "outputs": []
